--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -95,7 +95,8 @@ alias grep="/usr/local/bin/ggrep --color=auto --exclude-dir={.bzr,CVS,.git,.hg,.
 alias fuck='$(thefuck $(fc -ln -1))'
 
 # Powerline (installed with pip)
-. /usr/local/lib/python2.7/site-packages/powerline/bindings/zsh/powerline.zsh
+export PATH=$PATH:~/Library/Python/2.7/bin
+. ~/Library/Python/2.7/lib/python/site-packages/powerline/bindings/zsh/powerline.zsh
 
 # SSH quicks by jokimaki
 function sshprod {
