--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -116,3 +116,13 @@ function sshdev {
 export HOMEBREW_GITHUB_API_TOKEN="{{ homebrew_api_token }}"
 # alias psql='/Applications/Postgres.app/Contents/Versions/9.5/bin'/psql
 alias chrome="/Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome"
+
+export JAVA_8_HOME=$(/usr/libexec/java_home -v1.8)
+export JAVA_11_HOME=$(/usr/libexec/java_home -v11)
+
+alias java8='export JAVA_HOME=$JAVA_8_HOME'
+alias java11='export JAVA_HOME=$JAVA_11_HOME'
+
+# default to Java 11
+java11
+
