--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -126,3 +126,9 @@ alias java11='export JAVA_HOME=$JAVA_11_HOME'
 # default to Java 11
 java11
 
+# The next line updates PATH for the Google Cloud SDK.
+if [ -f '/Users/{{ user }}/bin/google-cloud-sdk/path.zsh.inc' ]; then . '/Users/{{ user }}/bin/google-cloud-sdk/path.zsh.inc'; fi
+
+# The next line enables shell command completion for gcloud.
+if [ -f '/Users/{{ user }}/bin/google-cloud-sdk/completion.zsh.inc' ]; then . '/Users/{{ user }}/bin/google-cloud-sdk/completion.zsh.inc'; fi
+
