--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -6,6 +6,8 @@ export ZSH=/Users/{{ user }}/.oh-my-zsh
 # Optionally, if you set this to "random", it'll load a random theme each
 # time that oh-my-zsh is loaded.
 ZSH_THEME="powerlevel9k/powerlevel9k"
+POWERLEVEL9K_LEFT_PROMPT_ELEMENTS=(context dir vcs)
+POWERLEVEL9K_RIGHT_PROMPT_ELEMENTS=(status battery time)
 DEFAULT_USER={{ user }}
 
 # Uncomment the following line to use case-sensitive completion.
@@ -132,3 +134,5 @@ if [ -f '/Users/{{ user }}/bin/google-cloud-sdk/path.zsh.inc' ]; then . '/Users/
 # The next line enables shell command completion for gcloud.
 if [ -f '/Users/{{ user }}/bin/google-cloud-sdk/completion.zsh.inc' ]; then . '/Users/{{ user }}/bin/google-cloud-sdk/completion.zsh.inc'; fi
 
+{# Add your sensitive environment variables to secret_zshrc.j2 #}
+{% include 'secret_zshrc.j2' ignore missing %}
