--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -7,7 +7,7 @@ export ZSH=/Users/{{ user }}/.oh-my-zsh
 # time that oh-my-zsh is loaded.
 ZSH_THEME="powerlevel9k/powerlevel9k"
 POWERLEVEL9K_LEFT_PROMPT_ELEMENTS=(context dir vcs)
-POWERLEVEL9K_RIGHT_PROMPT_ELEMENTS=(status battery time)
+POWERLEVEL9K_RIGHT_PROMPT_ELEMENTS=(status command_execution_time time)
 DEFAULT_USER={{ user }}
 
 # Uncomment the following line to use case-sensitive completion.
