--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -101,8 +101,8 @@ alias grep="/usr/local/bin/ggrep --color=auto --exclude-dir={.bzr,CVS,.git,.hg,.
 alias fuck='$(thefuck $(fc -ln -1))'
 
 # Powerline (installed with pip)
-export PATH=$PATH:~/Library/Python/{{ python_version }}/bin
-. ~/Library/Python/{{ python_version }}/lib/python/site-packages/powerline/bindings/zsh/powerline.zsh
+export PATH=$PATH:~/Library/Python/2.7/bin
+. ~/Library/Python/2.7/lib/python/site-packages/powerline/bindings/zsh/powerline.zsh
 
 # SSH quicks by jokimaki
 function sshprod {
@@ -145,5 +145,5 @@ if [ $commands[kubectl] ]; then source <(kubectl completion zsh); fi
 
 {% if graalvm.enabled %}
 export GRAALVM_HOME=/Users/{{ user }}/bin/graalvm-ce-{{ graalvm.version }}/Contents/Home
-export PATH=$GRAALVM_HOME/bin:$PATH
+export PATH=$PATH:$GRAALVM_HOME/bin
 {% endif %}
