docker-compose alias

--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -99,6 +99,7 @@ export LANG=en_US.UTF-8
 # From brew/coreutils
 alias grep="/usr/local/bin/ggrep --color=auto --exclude-dir={.bzr,CVS,.git,.hg,.svn}"
 alias -s xml=subl
+alias dcup="docker-compose up -d"
 
 # http://stackoverflow.com/questions/20794751/class-javalaunchhelper-is-implemented-in-both-one-of-the-two-will-be-used-whic
 
