--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -169,3 +169,7 @@ export PATH=$PATH:$GRAALVM_HOME/bin
 export NVM_DIR="$HOME/.nvm"
 [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
 [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
+
+{% if google_credentials is defined %}
+export GOOGLE_APPLICATION_CREDENTIALS={{ google_credentials }}
+{% endif %}
