--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -151,9 +151,16 @@ export NVM_DIR="$HOME/.nvm"
 [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
 [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
 
+[[ test kubectl ]] && source <(kubectl completion zsh)
+
 {% if google_credentials is defined %}
 export GOOGLE_APPLICATION_CREDENTIALS={{ google_credentials }}
 # for Ansible GCP inventory plugin
 export GCP_SERVICE_ACCOUNT_FILE={{ google_credentials }}
 alias gcurl='curl --header "Authorization: Bearer $(gcloud auth print-identity-token)"'
 {% endif %}
+
+###
+###  AWS stuff
+###
+alias awx-root='aws-vault exec quuppa-cloud-root --'
