--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -164,3 +164,5 @@ alias gcurl='curl --header "Authorization: Bearer $(gcloud auth print-identity-t
 ###  AWS stuff
 ###
 alias awx-root='aws-vault exec quuppa-cloud-root --'
+
+export GL_PAT={{ gitlab_pat }}
