--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -151,7 +151,7 @@ export NVM_DIR="$HOME/.nvm"
 [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
 [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
 
-[[ test kubectl ]] && source <(kubectl completion zsh)
+command -v kubectl &>/dev/null && source <(kubectl completion zsh)
 
 {% if google_credentials is defined %}
 export GOOGLE_APPLICATION_CREDENTIALS={{ google_credentials }}
