--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -55,7 +55,7 @@ HIST_STAMPS="dd.mm.yyyy"
 # Custom plugins may be added to ~/.oh-my-zsh/custom/plugins/
 # Example format: plugins=(rails git textmate ruby lighthouse)
 # Add wisely, as too many plugins slow down shell startup.
-plugins=(git aws kubectl docker docker-compose)
+plugins=(git aws kubectl docker docker-compose urltools)
 
 # User configuration
 
