AWS_DEFAULT_REGION

--- a/roles/aws-profile/templates/config.j2
+++ b/roles/aws-profile/templates/config.j2
@@ -1,5 +1,7 @@
-[profile quuppa-cloud-root]
+[default]
 region = eu-west-1
+
+[profile quuppa-cloud-root]
 output = json
 cli_follow_urlparam = false
 cli_pager=
