--- a/roles/zsh/templates/zshrc.j2
+++ b/roles/zsh/templates/zshrc.j2
@@ -178,3 +178,4 @@ alias gcurl='curl --header "Authorization: Bearer $(gcloud auth print-identity-t
 alias awx-root='aws-vault exec quuppa-cloud-root --'
 
 export GL_PAT={{ gitlab_pat }}
+export LEO_DEV={{ qpe_api_keys.dev.leo }}
