--- a/roles/zsh/templates/zshrc.j2
+++ b/roles/zsh/templates/zshrc.j2
@@ -55,7 +55,7 @@ HIST_STAMPS="dd.mm.yyyy"
 # Custom plugins may be added to ~/.oh-my-zsh/custom/plugins/
 # Example format: plugins=(rails git textmate ruby lighthouse)
 # Add wisely, as too many plugins slow down shell startup.
-plugins=(git aws terraform docker nmap urltools)
+plugins=(git ssh-plugin aws terraform asdf docker nmap urltools)
 
 # User configuration
 
@@ -65,7 +65,13 @@ export PATH="/usr/local/sbin:$PATH"
 
 export PATH=$PATH:{{ python_user_site.stdout }}:'/Applications/Sublime Text.app/Contents/SharedSupport/bin'
 
-# Launch OH MY
+# https://github.com/ohmyzsh/ohmyzsh/tree/master/plugins/ssh-agent#lazy
+zstyle :omz:plugins:ssh-agent lazy yes
+
+####################
+# Launch OH MY ZSH #
+####################
+
 source $ZSH/oh-my-zsh.sh
 
 fpath=(~/zsh-functions "${fpath[@]}")
