some git aliases

--- a/roles/zsh/templates/zshrc.j2
+++ b/roles/zsh/templates/zshrc.j2
@@ -115,7 +115,9 @@ alias grep="/usr/local/bin/ggrep --color=auto --exclude-dir={.bzr,CVS,.git,.hg,.
 alias -s xml=subl
 alias dcup="docker-compose up -d"
 alias gpskip="git push -o ci.skip"
+alias gcshort="git rev-parse --short"
 alias nnetstat="netstat -an"
+alias glgsearch="git log -S"
 
 # http://stackoverflow.com/questions/20794751/class-javalaunchhelper-is-implemented-in-both-one-of-the-two-will-be-used-whic
 
