--- a/roles/zsh/templates/zshrc.j2
+++ b/roles/zsh/templates/zshrc.j2
@@ -120,6 +120,8 @@ alias nnetstat="netstat -an"
 alias glgsearch="git log -S"
 alias pocker=podman
 alias sha256sum="shasum -a 256"
+alias json="jless"
+alias yless="jless --yaml"
 
 # http://stackoverflow.com/questions/20794751/class-javalaunchhelper-is-implemented-in-both-one-of-the-two-will-be-used-whic
 
