--- a/roles/zsh/templates/zshrc.j2
+++ b/roles/zsh/templates/zshrc.j2
@@ -139,6 +139,8 @@ alias yless="jless --yaml"
 export PYENV_ROOT="$HOME/.pyenv"
 command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"
 eval "$(pyenv init -)"
+# With pyenv-virtualenv plugin
+eval "$(pyenv virtualenv-init -)"
 # Set Python user site to PATH: (python3 -m site --user-base)
 export PATH="$PATH:{{ python_user_base.stdout }}/bin"
 
