--- a/roles/zsh/templates/zshrc.j2
+++ b/roles/zsh/templates/zshrc.j2
@@ -127,6 +127,8 @@ alias pocker=podman
 alias sha256sum="shasum -a 256"
 alias json="jless"
 alias yless="jless --yaml"
+alias awx="aws-vault exec"
+alias packbat="bat package.json"
 
 # http://stackoverflow.com/questions/20794751/class-javalaunchhelper-is-implemented-in-both-one-of-the-two-will-be-used-whic
 
