mise by default

--- a/roles/zsh/templates/zshrc.j2
+++ b/roles/zsh/templates/zshrc.j2
@@ -137,7 +137,8 @@ alias npmaws="npm run aws-login"
 alias mise-zsh='eval "$(mise activate zsh)"'
 
 
-# http://stackoverflow.com/questions/20794751/class-javalaunchhelper-is-implemented-in-both-one-of-the-two-will-be-used-whic
+# Mise https://github.com/jdx/mise
+eval "$(mise activate zsh)"
 
 # autojump
 [[ -s $(brew --prefix)/etc/profile.d/autojump.sh ]] && . $(brew --prefix)/etc/profile.d/autojump.sh
